# zyx-00072

backup_checker/: README.md  pyproject.toml
backup_checker/backup_checker/: cli.py  comparator.py  config.py  constants.py  doctor.py  drill.py  history.py  profile.py  reporter.py  scanner.py
backup_checker/backup_checker.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
backup_checker/tests/: test_doctor_e2e.py  test_doctor_unit.py  test_e2e_full.py  test_profile_e2e.py  test_profile_unit.py  test_scan_history_regression.py
examples/: report.text
examples/backup/database/: config.json
examples/backup/documents/: contract.txt  notes.txt  report.txt
examples/backup/extra/: unregistered-file.txt
examples/source/database/: backup.sql
examples/source/documents/: contract.txt  missing-file.txt
